<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/old_paper"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="170dp"
        android:fontFamily="@font/inter_bold"
        android:text="@string/hello_txt"
        android:textColor="@color/blue_txt"
        android:textSize="33sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TextContrastCheck" />

    <EditText
        android:id="@+id/user_login"
        android:layout_width="220dp"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:hint="@string/login_in_txt"
        android:importantForAutofill="no"
        android:inputType="text"
        android:textColor="@color/green"
        android:textColorHint="@color/hint_txt"
        tools:ignore="TextContrastCheck" />

    <EditText
        android:id="@+id/user_email"
        android:layout_width="220dp"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:drawableStart="@drawable/cnvrt"
        android:ems="10"
        android:hint="@string/mail_hint"
        android:importantForAutofill="no"
        android:inputType="textEmailAddress"
        android:textColor="@color/green"
        android:textColorHint="@color/hint_txt"
        tools:ignore="TextContrastCheck" />



    <EditText
        android:id="@+id/user_pass"
        android:layout_width="220dp"
        android:layout_height="50dp"
        android:ems="10"
        android:inputType="textPassword"
        android:hint="@string/psw_hint"
        android:drawableStart="@drawable/pas"
        android:layout_marginTop="20dp"
        android:layout_gravity="center"
        android:textColor="@color/green"
        android:textColorHint="@color/hint_txt"
        android:importantForAutofill="no" />

    <Button
        android:id="@+id/button_reg"
        android:layout_width="220dp"
        android:backgroundTint="@color/black"
        android:layout_gravity="center"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/rg_btn_title"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/LinkToAuth"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="left"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/inter"
        android:text="@string/sign_in_txt"
        android:textColor="@color/white"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="RtlHardcoded,TextContrastCheck" />

</LinearLayout>

